--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Vinci FTC Website
 
 # Your name to show in the footer
-author: Some Person
+author: Kyrie
 
 ###############################################
 # --- List of links in the navigation bar --- #
