--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,7 @@ footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
-
+title-col: "0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
