--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ round-avatar: false
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "lening@vincirobotics.org"
+  email: "info@vincisteamedu.com"
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
